fixed link colors and align issues

--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -143,7 +143,7 @@ h1.projects {
 	max-width: 280px;
 }
 
-.project a, .project a:active {
+.project a, .project a:active, .project a:hover {
 	color: black;
 	z-index: 99;
 	position: relative;
@@ -338,6 +338,7 @@ div.contact .header {
 .single p {
 	font-size: 1rem;
 	margin-bottom: 0;
+	font-weight: 300;
 }
 
 
@@ -402,7 +403,7 @@ div.contact .header {
 }
 
 
-a, a:hover {
+a, a:hover, a:active {
 	text-decoration: none;
 }
 
